--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-<h1>Hello!</h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-with, initial-scale=1.0">
+        <title>Resumen del alumno</title>
+</head>
+<body>
+    <header>
+        <h1>Informacio del Alumno</h1>
+    </header>
+
+    <nav>
+
+    </nav>
+
+    <main>
+        <article>
+            <h2>Datos Básicos</h2>
+            <ul>
+                <li><strong>Nombre:</strong> Fernando Aso</li>
+                <li><strong>Edad:</strong> 47 años</li>
+                <li><storong>País:</storong> Argentina</li>
+            </ul>
+        </article>
+
+        <article>
+            <h2>Intereses</h2>
+            <ul>
+                <li>Buceo</li>
+                <li>Aviación</li>
+                <li>Deportes al aire libre</li>
+                <li>Viajar</li>
+            </ul>
+        </article>
+
+        <article>
+            <h2>Experiencias</h2>
+            <p>Trabajo dando clases de física en escuelas secundarias</p>
+        </article>
+
+    </main>
+
+    <aside>
+
+    </aside>
+
+    <footer>
+
+    </footer>
+
+</body>
+</html>
