Agregado seccion practicos

--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
             <source src="video.mp4" type="video/mp4">
         </video>
         <p>Cerro Castor, Ushuaia</p><!--parrafo-->
+        <article>
+            <h2 class="titulo4">Practicos</h2>
+            <nav>
+            <a href="https://fernandopaso.github.io/sobre-mi/Practico1/">Practico1</a>
+            </nav>
+        </article>
+        
     
     </main>
 
